# TYMM-Veri-Cekme

./: GITHUB_MOBIL_YUKLEME.md  README.md  SCHEMA.md  cli.py  config.py  database.py  downloader.py  models.py  parser.py  pipeline.py  pyproject.toml  release.yml  requirements.txt  test.yml  test_crawler_fixture.py  test_database.py  test_utils.py  update-data.yml  utils.py
.github/workflows/: release.yml  test.yml  update-data.yml
