[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tymm-data-engine"
version = "0.1.0"
description = "MEB öğretim programlarını indirir, JSON ve SQLite veritabanı üretir."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4==4.12.3",
  "requests==2.32.4",
  "pypdf==5.1.0"
]

[project.scripts]
tymm = "tymm_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
